--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/ibrahim-raji-38ab15380/">LinkedIn</a></p>
         </div>
       </div>
     </section>
